# PigGame

./: .gitignore  PigGame.ipynb  pyproject.toml
src/: main.py
src/env/: dummy_player.py  pig_game.py
src/loop/: training_loop.py
src/model/: actor_critic.py
